# mkko_discord_bot

./: Cargo.toml
src/: main.rs
src/connection/: mod.rs  msg_struct.rs
src/discord_bot/: auth.rs  bot.rs  config.rs  mod.rs
